--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -12,6 +12,12 @@
     background: #ffffff;
 }
 
+.messages {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
 
 
 
