--- a/src/App.css
+++ b/src/App.css
@@ -43,3 +43,15 @@ a {
   padding:20px 30px 20px 40px;
 
 }
+
+button {
+  border: none;
+  color: #fff;
+  padding: 10px 20px;
+  transition:all .2s linear;
+}
+
+button:hover {
+  cursor: pointer;
+  background: #00732D;
+}
