--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -17,5 +17,12 @@
     flex: 1 1 auto;
     color:#000;
     text-align: right;
-
 }
+
+.account button {
+    margin: 0 0 0 20px;
+    color: #000000;
+    cursor: pointer;
+    transition: color .3s linear;
+}
+
