--- a/src/components/common/FormControls/FormControls.module.css
+++ b/src/components/common/FormControls/FormControls.module.css
@@ -12,3 +12,11 @@
     padding: 5px;
     color: red;
 }
+
+.captcha_wrapper {
+    margin: 0 0 15px 0;
+}
+
+.captcha_title {
+    margin: 10px 0 5px 0;
+}
